[gd_scene load_steps=30 format=3 uid="uid://bhpslab73d2j1"]

[ext_resource type="Script" path="res://GolemArmProjectile.gd" id="1_rytyv"]
[ext_resource type="Texture2D" uid="uid://dbcwrla12b7qk" path="res://scenes/enemies/golem/GolemSprite/weapon PNG/arm_projectile_glowing.png" id="2_kabip"]
[ext_resource type="Script" path="res://scenes/components/health_component.gd" id="2_pu38u"]
[ext_resource type="Script" path="res://scenes/components/hitbox_component.gd" id="3_p5lwt"]
[ext_resource type="Texture2D" uid="uid://bc5vdwiojsmqw" path="res://scenes/Effects/explosion/Explosions.png" id="3_rtr13"]
[ext_resource type="Script" path="res://scenes/components/hurt_component.gd" id="5_b8jpv"]

[sub_resource type="AtlasTexture" id="AtlasTexture_2gb72"]
atlas = ExtResource("3_rtr13")
region = Rect2(0, 0, 192, 192)

[sub_resource type="AtlasTexture" id="AtlasTexture_r4kq7"]
atlas = ExtResource("3_rtr13")
region = Rect2(192, 0, 192, 192)

[sub_resource type="AtlasTexture" id="AtlasTexture_wubgv"]
atlas = ExtResource("3_rtr13")
region = Rect2(384, 0, 192, 192)

[sub_resource type="AtlasTexture" id="AtlasTexture_h5tbh"]
atlas = ExtResource("3_rtr13")
region = Rect2(576, 0, 192, 192)

[sub_resource type="AtlasTexture" id="AtlasTexture_nawrl"]
atlas = ExtResource("3_rtr13")
region = Rect2(768, 0, 192, 192)

[sub_resource type="AtlasTexture" id="AtlasTexture_xdrxn"]
atlas = ExtResource("3_rtr13")
region = Rect2(960, 0, 192, 192)

[sub_resource type="AtlasTexture" id="AtlasTexture_8frjp"]
atlas = ExtResource("3_rtr13")
region = Rect2(1152, 0, 192, 192)

[sub_resource type="AtlasTexture" id="AtlasTexture_v1o5o"]
atlas = ExtResource("3_rtr13")
region = Rect2(1344, 0, 192, 192)

[sub_resource type="AtlasTexture" id="AtlasTexture_rkwe8"]
atlas = ExtResource("3_rtr13")
region = Rect2(1536, 0, 192, 192)

[sub_resource type="AtlasTexture" id="AtlasTexture_fcylq"]
atlas = ExtResource("2_kabip")
region = Rect2(0, 0, 100, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_rt61t"]
atlas = ExtResource("2_kabip")
region = Rect2(100, 0, 100, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_olson"]
atlas = ExtResource("2_kabip")
region = Rect2(200, 0, 100, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_1y62h"]
atlas = ExtResource("2_kabip")
region = Rect2(0, 100, 100, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_3vpa0"]
atlas = ExtResource("2_kabip")
region = Rect2(100, 100, 100, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_bmjia"]
atlas = ExtResource("2_kabip")
region = Rect2(200, 100, 100, 100)

[sub_resource type="SpriteFrames" id="SpriteFrames_teetk"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_2gb72")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_r4kq7")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_wubgv")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_h5tbh")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_nawrl")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_xdrxn")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_8frjp")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_v1o5o")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_rkwe8")
}],
"loop": true,
"name": &"explode",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_fcylq")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_rt61t")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_olson")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_1y62h")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_3vpa0")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_bmjia")
}],
"loop": true,
"name": &"glow",
"speed": 5.0
}]

[sub_resource type="CircleShape2D" id="CircleShape2D_s1fv8"]

[sub_resource type="CircleShape2D" id="CircleShape2D_1rvb3"]
radius = 68.0294

[sub_resource type="Animation" id="Animation_k2qs3"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("AnimatedSprite2D:animation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [&"default"]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("AnimatedSprite2D:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("AnimatedSprite2D:position")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(-28, 13)]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath(".:scale")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(3, 3)]
}

[sub_resource type="Animation" id="Animation_fkib0"]
resource_name = "explode"
length = 0.8
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("AnimatedSprite2D:animation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [&"explode"]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("AnimatedSprite2D:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7, 0.8),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 3, 4, 5, 6, 7, 8]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("AnimatedSprite2D:position")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(0, 0)]
}
tracks/3/type = "method"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath(".")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0.8),
"transitions": PackedFloat32Array(1),
"values": [{
"args": [],
"method": &"queue_free"
}]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath(".:scale")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(2, 2)]
}

[sub_resource type="Animation" id="Animation_j6hg7"]
resource_name = "glow"
length = 0.8
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("AnimatedSprite2D:animation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [&"glow"]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("AnimatedSprite2D:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.2, 0.4, 0.6, 0.8),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1),
"update": 1,
"values": [0, 2, 3, 4, 5]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("AnimatedSprite2D:position")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(-28, 13)]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath(".:scale")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(3, 3)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_pgqet"]
_data = {
"RESET": SubResource("Animation_k2qs3"),
"explode": SubResource("Animation_fkib0"),
"glow": SubResource("Animation_j6hg7")
}

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_c52qs"]
radius = 5.33333

[node name="GolemArmProjectile" type="Area2D"]
z_index = 1
scale = Vector2(3, 3)
collision_layer = 0
collision_mask = 128
script = ExtResource("1_rytyv")

[node name="HealthComponent" type="Node" parent="."]
script = ExtResource("2_pu38u")
health = 10

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
modulate = Color(0.847059, 0.976471, 0.890196, 1)
position = Vector2(-28, 13)
sprite_frames = SubResource("SpriteFrames_teetk")

[node name="HitboxComponent" type="Area2D" parent="."]
collision_layer = 32
collision_mask = 128
script = ExtResource("3_p5lwt")

[node name="CollisionShape2D" type="CollisionShape2D" parent="HitboxComponent"]
shape = SubResource("CircleShape2D_s1fv8")
debug_color = Color(0.976471, 0, 0.427451, 0.109804)

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("CircleShape2D_1rvb3")
debug_color = Color(0, 0.6, 0.701961, 0.0862745)

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_pgqet")
}
autoplay = "glow"

[node name="ChaseTimer" type="Timer" parent="."]
wait_time = 3.0
one_shot = true

[node name="VisibleOnScreenNotifier2D" type="VisibleOnScreenNotifier2D" parent="."]

[node name="HurtComponent" type="Area2D" parent="." node_paths=PackedStringArray("health_component", "invincibility_timer")]
collision_layer = 0
collision_mask = 0
script = ExtResource("5_b8jpv")
health_component = NodePath("../HealthComponent")
invincibility_timer = NodePath("_Timer")
is_enemy = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="HurtComponent"]
rotation = 1.5708
shape = SubResource("CapsuleShape2D_c52qs")
debug_color = Color(0, 0.639216, 0.364706, 0.419608)

[node name="_Timer" type="Timer" parent="HurtComponent"]

[connection signal="area_entered" from="." to="." method="_on_area_entered"]
[connection signal="timeout" from="ChaseTimer" to="." method="_on_chase_timer_timeout"]
[connection signal="screen_exited" from="VisibleOnScreenNotifier2D" to="." method="_on_visible_on_screen_notifier_2d_screen_exited"]
